2004-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily.scm: Mark un-internationlised user messages (with FIXME).

	* lily/include/modified-font-metric.hh (struct
	Modified_font_metric): New file.  (WAS: incorrectly named
	scaled-font-metric.hh ?)

	* lily/include/scaled-font-metric.hh: Remove.

	* lily/text-item.cc (interpret_string): Identify and document
	input-encoding problem.

	* lily/paper-book.cc (pages): Do not use `paper' as variable name
	for a Bookpaper.

	* tex/latin1.enc: Replace /minus with /hyphen.  WL says that's the
	latin1 name.

	* scm/encoding.scm: For latin1 (input-)encoding, use
	latin1.  (Cork.enc is NOT latin1 -- see man latin1).

	* ly/book-paper-defaults.ly: Add a comment about suspicious TeX
	inputencoding.

2004-08-12  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/INSTALL.html: fixes.

2004-08-12  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>

	* buildscripts/builder.py: Fix for scons CVS.

2004-08-11  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/notation.itely,
	Documentation/topdocs/NEWS.texi, input/test/ambitus-mixed.ly,
	input/test/ambitus-mixed.ly: fix plurals:
	english: ambit, pl. ambits; latin: ambitus, pl. ambitus.

2004-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/dynamic-engraver.cc (typeset_all):
	* lily/script-engraver.cc (stop_translation_timestep): Handle
	collisions with new-slur.

2004-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-grobs.scm (all-grob-descriptions): Add
	new-slur-interface.

2004-08-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* elisp/lilypond-mode.el (LilyPond-command-alist): LilyPond now
	produces .PS

2004-08-09  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/define-grob-properties.scm (all-user-grob-properties): fix
	definition of number-type

2004-08-08  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/fret-diagrams.scm : change sans-serif font encoding from 
	TeX-text to ec (uses ecss fonts instead of cmss fonts)
